--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DISCORD_TOKEN=OTIyMDc3MjkzODE4NTY4NzY0.Yb8NZg.XktStJppfXPAQKj30RV-ib8IXZo
-LINE_TOKEN=nbTaKpaK84zihGKEXUP4pucBroXbcuUvVsJsb3PMu4J
+DISCORD_TOKEN=aa
+LINE_TOKEN=aa
